blue everything, new font, restructure files

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Comfortaa:wght@300;400;500;600;700&family=Dosis:wght@200;300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Ubuntu+Condensed&family=Pacifico&family=Comfortaa:wght@300;400;500;600;700&family=Dosis:wght@200;300;400;500;600;700;800&display=swap');
 
 :root {
     --white-light: #f4f8ff;
+    --white-blue: #f6f8fb;
     --white-mid: #F2EEED;
     --white-dark: #eae2e0;
     --brown-light: #dac5ae;
@@ -19,12 +20,14 @@
     --purple-mid-ish: #813679;
     --purple-dark: #562450;
     --purple-v-dark: #3A1836;
-    --blue-light: #c7d4ed;
     /* blue-light wcag AAA compliant : #D8E2F3 */
+    --blue-light: #D8E2F3;
+    /* --blue-light: #c7d4ed; */
     --blue-mid: #a7beed;
     --blue-dark: #92ade4;
     /* blue-v-dark wcag AAA compliant : #33467A */
-    --blue-v-dark: #748ec3;
+    --blue-v-dark: #33467A;
+    /* --blue-v-dark: #748ec3; */
     --grey-light: #364156;
     --grey-mid: #212D40;
     --grey-dark: #11151C;
@@ -36,20 +39,22 @@
     --background-dark: var(--blue-v-dark);
     --background-button: var(--blue-light);
     /* --border-light: 3px solid var(--blue-light-ish); */
-    --border-mid: 3px solid var(--blue-mid);
-    --border-dark: 3px solid var(--blue-dark);
-    --border-v-dark: 3px solid var(--blue-v-dark);
-    --border-v-v-dark: 3px solid var(--grey-light);
-    --border-button: 3px solid var(--blue-mid);
-    --shadow-light: ;
-    --shadow-mid: ;
-    --shadow-dark: ;
+    --border-mid: 2px solid var(--blue-mid);
+    --border-dark: 2px solid var(--blue-dark);
+    --border-v-dark: 2px solid var(--blue-v-dark);
+    --border-v-v-dark: 2px solid var(--grey-light);
+    --border-button: 2px solid var(--blue-mid);
+    --border-hamburger: 2px solid var(--blue-dark);
+    --shadow-light: 0px 0px 8px 1px var(--blue-light);
+    --shadow-mid: 0px 0px 8px 1px var(--blue-mid);
+    --shadow-dark: 1px 1px 5px 1px var(--blue-dark);
+    --shadow-v-dark: 1px 1px 5px 1px var(--blue-v-dark);
     --box-shadow: 0px 0px 8px 1px rgb(227, 227, 227);
 
 }
 
 * {
-    font-family: 'Comfortaa', 'Dosis', Arial, sans-serif;
+    font-family: 'Ubuntu Condensed', 'Comfortaa', 'Dosis', Arial, sans-serif;
     font-size: 16px;
     color: var(--text-dark);
     /* text-decoration: none; */
@@ -110,8 +115,8 @@
     height: 4px;
     width: 100%;
     border-radius: 10px;
-    background: white;
-    border: var(--border-v-dark);
+    background: var(--white-blue);
+    border: var(--border-hamburger);
     }
 
     /* -- transform hamburger lines -- */
@@ -132,29 +137,29 @@
     /* -- change hamburger when checked -- */
     .checkbox input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
     transform: rotate(45deg);
-    background: white;
-    border: var(--border-v-dark)
+    background: var(--white-blue);
+    border: var(--border-hamburger)
     }
     
     .checkbox input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
     transform: scaleY(0);
-    background: white;
-    border: var(--border-v-dark)
+    background: var(--white-blue);
+    border: var(--border-hamburger)
     }
     
     .checkbox input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
     transform: rotate(-45deg);
-    background: white;
-    border: var(--border-v-dark)
+    background: var(--white-blue);
+    border: var(--border-hamburger)
     }
 
 /*  ----------------- buttons ---------------- */
 
 button, .button {
     /* background-color: var(--background-button); */
-    background-color: white;
+    background-color: var(--white-blue);
     border: var(--border-button);
-    border-radius: 15px;
+    border-radius: 5px;
     color: var(--text-dark);
     font-size: 1.2em;
     margin: 5px;
@@ -174,7 +179,7 @@ img {
     min-height: 200px;
     object-fit: cover;
     object-position: center;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
 header {
@@ -213,6 +218,7 @@ section div {
     align-items: center;
     padding: 5px;
     margin: 5px;
+    width: 100%;
 }
 
 footer {
@@ -225,22 +231,26 @@ h1, h2, h3, h4, p, ul, li, i {
 }
 
 h1 {
-    font-family: "Pacifico";
+    font-family: "Amatic SC";
     width: 100%;
-    font-size: 5em;
-    font-weight: 700;
+    font-size: 5.5em;
+    font-weight: 400;
     text-align: center;
     color: var(--text-dark);
+    padding: 10px;
+    margin: 10px;
 }
 
 h2 {
-    font-size: 2em;
+    font-family: "Amatic SC";
+    font-size: 2.5em;
     font-weight: 600;
     text-align: center;
 }
 
 h3 {
-    font-size: 1.5em;
+    font-family: "Amatic SC";
+    font-size: 2em;
 }
 
 .projects {
@@ -257,12 +267,12 @@ h3 {
 /* ------------------- home page --------------------- */
 
 #profile-img {
-    width: 30%;
-    height: 30%;
+    width: 80%;
+    /* height: 30%; */
     /* background-color: var(--background-mid); */
     object-fit: cover;
     object-position: center;
-    border-radius: 0%;
+    border-radius: 100%;
 }
 
 .card {
@@ -270,11 +280,11 @@ h3 {
     padding: 10px;
     margin: 10px;
     /* background-color: var(--background-light); */
-    background-color: white;
-    border: 3px solid var(--blue-mid);
-    border-radius: 15px;
+    background-color: var(--white-blue);
+    border: 2px solid var(--blue-mid);
+    border-radius: 5px;
     text-decoration: none;
-    box-shadow: var(--box-shadow);
+    /* box-shadow: var(--shadow-dark); */
 }
 
 a.card:hover {
@@ -287,7 +297,7 @@ a.card:hover {
     background-color: var(--background-light);
     width: 90%;
     padding: 10px;
-    border-radius: 15px;
+    border-radius: 5px;
     margin: 10px;
 }
 
@@ -304,7 +314,7 @@ form {
     flex-direction: column;
     background-color: var(--background-light);
     padding: 10px;
-    border-radius: 15px;
+    border-radius: 5px;
     margin: 10px;
 }
 
@@ -314,7 +324,7 @@ label {
 
 input, textarea {
     padding: 5px;
-    border-radius: 15px;
+    border-radius: 5px;
     /* margin: 10px; */
 }
 
