--- a/styles.css
+++ b/styles.css
@@ -245,13 +245,14 @@ h1 {
 h2 {
     font-family: "Pacifico";
     font-size: 2.5em;
-    font-weight: 600;
+    font-weight: 400;
     text-align: center;
 }
 
 h3 {
     font-family: "Pacifico";
     font-size: 1.5em;
+    font-weight: 400;
 }
 
 #profile-img {
@@ -277,10 +278,10 @@ h3 {
 
 /*  ----------------- buttons ---------------- */
 
-.intro button, .intro a.button {
+/* .intro button, .intro a.button {
     background-color: var(--white);
     border: var(--border-pink-light);
-}
+} */
 
 button, a.button {
     background-color: var(--pink-light);
@@ -404,7 +405,17 @@ input:active, input:focus, textarea:active, textarea:focus {
 
     /*  ------------------------ global --------------------- */
 
+    h1 {
+        font-size: 10rem;
+    }
 
+    h2 {
+        font-size: 3rem;
+    }
+
+    h3 {
+        font-size: 2rem;
+    }
 
     .projects {
         /* background-color: var(--white); */
@@ -412,6 +423,46 @@ input:active, input:focus, textarea:active, textarea:focus {
         margin: 50px;
         border-radius: 20px;
     }
+    .card {
+        width: 20%;
+    }
+
+    a:hover, a.button:hover, button:hover, a.card:hover {
+        border: var(--border-pink);
+    }
+
+    /*  ------------------------ home page --------------------- */
+
+    .home .projects {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: baseline;
+    }
+
+    .home h2 {
+        width: 100%
+    }
+
+    .intro {
+        justify-content: center;
+        min-height: 200px
+    }
+
+    .intro button, .intro a.button {
+        width: 30%;
+    }
+
+    /*  ------------------------ projects --------------------- */
+
+    .projects {
+        width: 70%;
+    }
+
+    /*  ------------------------ about me --------------------- */
+
+
+    /*  ------------------------ contact me --------------------- */
 
 
 }
