more style changes for desktop

--- a/styles.css
+++ b/styles.css
@@ -31,23 +31,23 @@
 
     --border-white: 2px solid var(--white);
     --border-pink: 2px solid var(--pink);
-    --border-pink-light: 1px solid var(--pink-light);
+    --border-pink-light: 2px solid var(--pink-light);
     --border-yellow: 2px solid var(--yellow);
-    --border-yellow-light: 1px solid var(--yellow-light);
+    --border-yellow-light: 2px solid var(--yellow-light);
     --border-green: 2px solid var(--green);
-    --border-green-light: 1px solid var(--green-light);
+    --border-green-light: 2px solid var(--green-light);
     --border-blue: 2px solid var(--blue);
-    --border-blue-light: 1px solid var(--blue-light);
+    --border-blue-light: 2px solid var(--blue-light);
     --border-purple: 2px solid var(--purple);
-    --border-purple-light: 1px solid var(--purple-light);
+    --border-purple-light: 2px solid var(--purple-light);
 
     --hamburger-background: var(--pink);
     --hamburger-border: 1px solid var(--white);
 
-    --shadow-pink: 1px 1px 5px 1px var(--pink-light);
+    --shadow-pink: 1px 1px 5px 1px var(--pink);
     --shadow-yellow: 1px 1px 5px 1px var(--yellow-light);
     --shadow-green: 1px 1px 5px 1px var(--green-light);
-    --shadow-blue: 1px 1px 5px 1px var(--blue-light);
+    --shadow-blue: 1px 1px 5px 1px var(--blue);
     --shadow-purple: 1px 1px 5px 1px var(--purple-light);
     --box-shadow: 1px 1px 5px 1px var(--blue);
 
@@ -215,15 +215,26 @@ section div {
 
 footer {
     background-color: var(--purple-light);
-    min-height: 50px;
-    max-height: 10px;
+    min-height: 90px;
+    max-height: 250px;
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-evenly;
     align-items: center;
 }
 
+footer nav, footer p {
+    text-align: center;
+}
+
+footer nav a {
+    border-top: var(--border-purple-light);
+    border-left: var(--border-purple-light);
+    border-right: var(--border-purple-light);
+}
+
 h1, h2, h3, h4, p, ul, li, i {
+    /* width: 100%; */
     padding: 5px;
     margin: 5px;
 }
@@ -251,7 +262,7 @@ h1 {
 }
 
 h2 {
-    font-family: "Pacifico";
+    /* font-family: "Pacifico"; */
     font-size: 2.5em;
     font-weight: 400;
     text-align: center;
@@ -418,19 +429,26 @@ input:active, input:focus, textarea:active, textarea:focus {
         border: none;
         padding: 8px;
         margin: 5px;
-        border: 2px solid var(--blue-light);
-        border-radius: 10px;
+        border-top: var(--border-blue-light);
+        border-left: var(--border-blue-light);
+        border-right: var(--border-blue-light);
+        border-bottom: var(--border-white);
+        /* border-radius: 10px; */
         font-size: 1.2rem;
     }
 
     /*  ------------------------ global --------------------- */
 
+    iframe {
+        min-height: 350px;
+    }
+
     h1 {
         font-size: 5rem;
         padding-top: 20px;
         margin-top: 20px;
-        min-height: 350px;
-        align-items: flex-end;
+        /* min-height: 350px; */
+        /* align-items: flex-end; */
     }
 
     h2 {
@@ -465,7 +483,7 @@ input:active, input:focus, textarea:active, textarea:focus {
         border-radius: 20px;
     }
     .card {
-        width: 15%;
+        width: 100%/3;
         /* border: 2px solid var(--yellow); */
         /* background-color: var(--yellow-light); */
         /* background: white; */
@@ -473,25 +491,22 @@ input:active, input:focus, textarea:active, textarea:focus {
         /* transition: background 5s ease-in-out;; */
     }
 
-    /* ttest */
-    .card:hover {
-        /* background: var(--rainbow); */
-        /* background-color: #E6006B; */
+    a.card:hover, a.button:hover, button:hover {
+        border: var(--border-pink);
+        box-shadow: var(--shadow-pink);
     }
 
-    a:hover, a.button:hover, button:hover, a.card:hover {
-        border: var(--border-pink);
-        /* background: var(--rainbow); */
+    header nav a:hover{
+        border: var(--border-blue);
+        color: var(--text-dark);
+    }
+
+    footer nav a:hover{
+        border: var(--border-purple);
+        color: var(--text-dark);
     }
 
     /*  ------------------------ home page --------------------- */
-
-    .home .projects {
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: baseline;
-    }
 
     .home h2 {
         width: 100%
@@ -507,10 +522,38 @@ input:active, input:focus, textarea:active, textarea:focus {
         background-color: var(--white);
     }
 
+    .home .projects {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        /* align-items: baseline; */
+        width: 70%;
+    }
+
+    .home .projects .card {
+        width: 28%;
+        height: 320px;
+        border: var(--border-pink-light);
+    }
+
+    .home .projects .card:hover {
+        border: var(--border-pink);
+        box-shadow: var(--shadow-pink);
+    }
+
+    .home .projects .card img {
+        height: 50%;
+        }
+
     /*  ------------------------ projects --------------------- */
 
     .projects {
         width: 70%;
+    }
+
+    .project_details h2, .project_details p, .project_details ul {
+        /* align-items: flex-start; */
+        width: 100%;
     }
 
     /*  ------------------------ about me --------------------- */
